--- a/career6.5/index.html
+++ b/career6.5/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    <h1>The Study of Medicine</h1>
+    <h1>The Study of Medicine!</h1>
     </header>
     <main>
     <h2>Medicine is the field of health and healing.</h2>
