--- a/unit4/gallery3/contact.html
+++ b/unit4/gallery3/contact.html
@@ -35,10 +35,31 @@
     </head>
 
     <body>
-
+        
         <main class="container">
+            <a href="index.html">Home</a>
+            <a href="castle-gallery.html">Gallery</a>
 
-           <!--Content Goes Here-->
+           <div class="container-fluid">
+
+           </div>
+           <div class="container">
+                <header>
+                    <h1>Contact<small class="text-muted"> information</small></h1>
+                </header>
+                <button>
+                    Email Me
+                </button>
+                <button>
+                    Mail Me
+                </button>
+                <button>
+                    Find Me
+                </button>
+                <button>
+                    Call Me
+                </button>
+           </div>
 
         </main>
 
