--- a/unit4/gallery3/castle-gallery.html
+++ b/unit4/gallery3/castle-gallery.html
@@ -30,6 +30,7 @@
     <div>
         <a href="index.html">Home</a>
         <a href="castlegallery.html">Galleries</a>
+        <a href="contact.html">Contact</a>
     </div>
     <header>
         <h1>Castle Gallery</h1>
