--- a/unit4/gallery3/contact.html
+++ b/unit4/gallery3/contact.html
@@ -44,21 +44,32 @@
 
            </div>
            <div class="container">
-                <header>
-                    <h1>Contact<small class="text-muted"> information</small></h1>
-                </header>
+                    <h1 class="black">Contact<small class="text-muted"> information</small></h1>
+                <hr>
+              <div class="row">
                 <button>
-                    Email Me
+                    <i class="bi bi-at"></i>Email Me
                 </button>
+                <p class="center">bustamantep25@divinechildhighschool.org</p>
+            </div>
+            <div class="row">
                 <button>
-                    Mail Me
+                    <i class="bi bi-envelope"></i>Mail Me
                 </button>
+                <p class="center">1001 Silvery Ln, Dearborn, MI 48128</p>
+            </div>
+            <div class="row">
                 <button>
-                    Find Me
+                    <i class="bi bi-search"></i>Find Me
                 </button>
+                <P class="center">@JamesWhite</P>
+            </div>
+            <div class="row">
                 <button>
-                    Call Me
+                    <i class="bi bi-telephone"></i>Call Me
                 </button>
+                <p class="center">(313)-583-3949</p>
+            </div>
            </div>
 
         </main>
