more final work

--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -42,19 +42,23 @@
         <h1>Tyler <small class="text-muted">"Ninja"</small> Blevins</h1>
     </header>
     <main class="container-fluid">
-        <h3>Tyler Blevins, better known as Ninja, on youtube and twitch rose to fame in 2017.</h3>
+        <h3>Tyler Blevins, better known as Ninja on youtube and twitch, made a significant following mostly off playing Fortnite.</h3>
         <div class="row">
             <div class="col-sm-3">
-                <img src="contact.png">
+                <a href="contact.html"><img class="border2" src="contact.png"></a>
+                <div class="middle"><p class="middle">Contact Ninja</p></div>
             </div>
             <div class="col-sm-3">
-                <img src="">
+                <a href="ninjaport.html"><img class="border" src="person.svg"></a>                
+                <div class="middle"><p class="middle">Ninja Portfolio</p></div>
             </div>
             <div class="col-sm-3">
-                <img src="newnews.jpg">
+                <a href="news.html"><img class="border" src="newnews.jpg"></a>
+                <div class="middle"><p class="middle">Recent News</p></div>
             </div>
             <div class="col-sm-3">
-                <img src="icon.png">
+                <a href="moreinfo.html"><img class="backblack border" src="icon.png"></a>
+                <div class="middle"><p class="middle">More Information</p></div>
 
             </div>
     </main>
