--- a/FINAL/moreinfo.html
+++ b/FINAL/moreinfo.html
@@ -34,12 +34,16 @@
 
     </head>
 
-    <body>
-
+    <body class="cover">
+        <header>
+            <h1>More Info on Ninja</h1>
+        </header>
         <main class="container">
-
-           <h1>More Info on Ninja</h1>
-
+            <h3>
+                dw
+            </h3>
+           
+            
         </main>
 
     </body>
