--- a/FINAL/ninjaport.html
+++ b/FINAL/ninjaport.html
@@ -34,11 +34,59 @@
 
     </head>
 
-    <body>
-
+    <body class="cover">
+        <header>
+            <h1>Ninja's Accomplishments</h1>
+        </header>
         <main class="container">
 
-           <h1>Ninja's Accomplishments</h1>
+           <h3>
+                Ninja has won many awards throughout his entertainment career mostly becuase of his success in fortnite.
+           </h3>
+           <h4>
+            The first of Ninja's many accomplishments is his countless followers across multiple platforms
+           </h4>
+           <table class="table-bordered">
+            <tr>
+                <th>Platform</th>
+                <th>Follower Count</th>
+            </tr>
+            <tr>
+                <td>Youtube</td>
+                <td>23.9 Million</td>
+            </tr>
+            <tr>
+                <td>Tiktok</td>
+                <td>10.8 Million</td>  
+            </tr>
+            <tr>
+                <td>Twitch</td>
+                <td>18.8 Million</td>
+            </tr>
+            <tr>
+                <td>Instagram</td>
+            </tr>
+           
+           </table>
+           <h3>Ninja has also won many awards. These are the most prominent awards he has won while he has also been nominated for serveral more.</h3>
+           <table class="table-bordered">
+            <tr>
+                <th>Awards Won</th>
+                <th>Description</th>
+            </tr>
+            <tr>
+                <td>Streamy Awards</td>
+                <td>Gaming and Live Streaming</td>
+            </tr>
+            <tr>
+                <td>The Game Awards 2018</td>
+                <td>Content Creator of the Year</td>  
+            </tr>
+            <tr>
+                <td>Shorty Awards</td>
+                <td>Twitch Streamer of the Year</td>
+            </tr>
+           </table>
 
         </main>
 
