final project table

--- a/FINAL/contact.html
+++ b/FINAL/contact.html
@@ -39,14 +39,14 @@
 
 <body class="cover">
     <header>
-        <h1>Ninja's Contacts</h1>
+        <h1>Ninja's Socials</h1>
     </header>
     <main class="container">
         <div class="container-fluid">
 
         </div>
         <div class="container">
-            <h1 class="black">Contact<small class="text-muted"> information</small></h1>
+            <h1 class="black">Social Media<small class="text-muted"> information</small></h1>
             <hr>
             <div class="row">
                 <div class="d-grid gap-2">
