--- a/FINAL/ninjaport.html
+++ b/FINAL/ninjaport.html
@@ -52,7 +52,7 @@
                 <th>Follower Count</th>
             </tr>
             <tr>
-                <td>Youtube</td>
+                <td>Main Youtube</td>
                 <td>23.9 Million</td>
             </tr>
             <tr>
@@ -65,6 +65,7 @@
             </tr>
             <tr>
                 <td>Instagram</td>
+                <td>12 Million</td>
             </tr>
            
            </table>
