--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -45,19 +45,19 @@
         <h3>Tyler Blevins, better known as Ninja on youtube and twitch, made a significant following mostly off playing Fortnite.</h3>
         <div class="row">
             <div class="col-sm-3">
-                <a href="contact.html"><img class="border2" src="contact.png"></a>
-                <div class="middle"><p class="middle">Contact Ninja</p></div>
-            </div>
+                <a href="contact.html"><img class="image img-thumbnail" src="contact.png"></a>
+                <div class="middle"><p class="middle">Ninja Socials</p></div>
+            </div> 
             <div class="col-sm-3">
-                <a href="ninjaport.html"><img class="border" src="person.svg"></a>                
+                <a href="ninjaport.html"><img class="image img-thumbnail" src="person.svg"></a>                
                 <div class="middle"><p class="middle">Ninja Portfolio</p></div>
             </div>
             <div class="col-sm-3">
-                <a href="news.html"><img class="border" src="newnews.jpg"></a>
+                <a href="news.html"><img class="image img-thumbnail" src="newnews.jpg"></a>
                 <div class="middle"><p class="middle">Recent News</p></div>
             </div>
             <div class="col-sm-3">
-                <a href="moreinfo.html"><img class="backblack border" src="icon.png"></a>
+                <a href="moreinfo.html"><img class="image img-thumbnail" src="icon.png"></a>
                 <div class="middle"><p class="middle">More Information</p></div>
 
             </div>
