--- a/FINAL/news.html
+++ b/FINAL/news.html
@@ -35,10 +35,32 @@
     </head>
 
     <body class="cover">
+        <nav class="nav">
 
+
+
+            <ul class="nav nav-tabs">
+
+                <li class="nav-item"><a class= "nav-link active" href="index.html">Home</a></li>
+                
+                <li class="nav-item" ><a class= "nav-link" href="contact.html">Socials</a></li>
+
+                <li class="nav-item"><a class= "nav-link" href="moreinfo.html">More Info</a></li>
+
+                <li class="nav-item"><a class= "nav-link" href="ninjaport.html">Portfolio</a></li>
+
+            </ul>
+
+
+
+        </nav>
+        <header>
+            <h1>Recent News about Ninja</h1>
+        </header>
         <main class="container">
-
-           <h1>Recent News about Ninja</h1>
+            <h3>Ninja's peak following was in 2018. However since then his viewership has only gone down. He broke a record at the time with 600 thousand concurrent viewers. He averaged nearly 26,000 views at a time but now he only averages around 7000 viewers. However with the recent addition of season OG in Fortnite, Ninja's popularity has skyrocketed up. </h3>
+            <img class="stream" src="ninjastream.webp">
+           
 
         </main>
 
