--- a/FINAL/ninjaport.html
+++ b/FINAL/ninjaport.html
@@ -35,6 +35,25 @@
     </head>
 
     <body class="cover">
+        <nav class="nav">
+
+
+
+            <ul class="nav nav-tabs">
+
+                <li class="nav-item"><a class= "nav-link active" href="index.html">Home</a></li>
+                
+                <li class="nav-item" ><a class= "nav-link" href="contact.html">Socials</a></li>
+
+                <li class="nav-item"><a class= "nav-link" href="news.html"><p>News</p></a></li>
+
+                <li class="nav-item"><a class= "nav-link" href="moreinfo.html">More Info</a></li>
+
+            </ul>
+
+
+
+        </nav>
         <header>
             <h1>Ninja's Accomplishments</h1>
         </header>
