--- a/FINAL/contact.html
+++ b/FINAL/contact.html
@@ -38,6 +38,25 @@
 </head>
 
 <body class="cover">
+    <nav class="nav">
+
+
+
+        <ul class="nav nav-tabs">
+
+            <li class="nav-item"><a class= "nav-link active" href="index.html">Home</a></li>
+            
+            <li class="nav-item" ><a class= "nav-link" href="moreinfo.html">More Info</a></li>
+
+            <li class="nav-item"><a class= "nav-link" href="news.html"><p>News</p></a></li>
+
+            <li class="nav-item"><a class= "nav-link" href="ninjaport.html">Portfolio</a></li>
+
+        </ul>
+
+
+
+    </nav>
     <header>
         <h1>Ninja's Socials</h1>
     </header>
